--- a/index.html
+++ b/index.html
@@ -43,8 +43,120 @@
             <div class="section-1-column">
                 <h3>Top Picks for your home</h3>
                 <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG15/Irfan/GATEWAY/MSO/Appliances-QC-PC-372x232----B08RDL6H79._SY232_CB667322346_.jpg" alt="">
+                <p>See more</p>
+            </div>
+            <div class="section-1-column">
+                <h3>Top rated,premium quality | Amazon Brands & more</h3>
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonSmallBusinessDay/PrivateBrands/GW20/GW_Desktop_Softlines_QC_2X_V2_5._SY232_CB636581721_.jpg" alt="">
+                <p>See more</p>
+            </div>
+            <div class="section-1-column">
+                <h3>Shop & Pay | Early rewards daily</h3>
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Electronics/Clearance/Clearance_store_Desktop_CC_2x._SY608_CB628315133_.jpg" alt="">
+                <p>See more</p>
+            </div>
+            <div class="section-1-column">
+                <h3>Sign in for your best experience</h3>
+                <button>Sign in Securely</button>
             </div>
         </div>
+    </section>
+
+    <!-- SECTION 2-RELATED ITEMS -->
+    <section class="section-2">
+        <div class="section-2-container">
+            <h3>Related to items you've viewed</h3>
+            <div class="product-cards">
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/61Y30DpqRVL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/61LNnZPoKPS._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/71iiXU7HHkL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/61XZQXFQeVL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/712B4P3yOnL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/51eTOVYRbTL._AC_SY400_.jpg" alt="">
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!-- SECTION 2-GROCERIES -->
+    <section class="section-2">
+        <div class="section-2-container">
+            <h3>Best Sellers in Grocery & Gourmet Food</h3>
+            <div class="product-cards">
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/617tvTiZLGL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/51tNket0w8L._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/91oNY+gNzPL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/81NrftYFxsL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/61uohjMdfzL._AC_SY400_.jpg" alt="">
+
+                </div>
+                <div class="product-card">
+                    <img src="https://m.media-amazon.com/images/I/61oagbcgAtS._AC_SY400_.jpg" alt="">
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- SECTION 3 -->
+    <section class="section-3">
+        <div class="section-3-container">
+            <h3>Inspired by browsing history</h3>
+            <div class="product-detail-cards">
+                <div class="product-detail-card">
+                    <div class="product-detail-img">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/I/61aUBxqc5PL._AC_UL320_SR320,320_.jpg" alt="">
+
+                    </div>
+                    <a href="./product.html">A Modern Approach To Verbal & Non-Verbal Reasoning (Video Edition)  (2022-23)
+
+                        </a>
+                        <p>
+                            <strong>₹ 34,529.00</strong>
+                        </p>
+                        <p class="product-delivered-by">FREE delivery Wednesday, 14 December. Details</p>
+
+                </div>
+
+            </div>
+
+        </div>
+
     </section>
 </body>
 </html>
