--- a/index.html
+++ b/index.html
@@ -154,9 +154,87 @@
                 </div>
 
             </div>
+            <div class="product-detail-cards">
+                <div class="product-detail-card">
+                    <div class="product-detail-img">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/I/61aUBxqc5PL._AC_UL320_SR320,320_.jpg" alt="">
+
+                    </div>
+                    <a href="./product.html">A Modern Approach To Verbal & Non-Verbal Reasoning (Video Edition)  (2022-23)
+
+                        </a>
+                        <p>
+                            <strong>₹ 34,529.00</strong>
+                        </p>
+                        <p class="product-delivered-by">FREE delivery Wednesday, 14 December. Details</p>
+
+                </div>
+
+            </div>
+            <div class="product-detail-cards">
+                <div class="product-detail-card">
+                    <div class="product-detail-img">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/I/61aUBxqc5PL._AC_UL320_SR320,320_.jpg" alt="">
+
+                    </div>
+                    <a href="./product.html">A Modern Approach To Verbal & Non-Verbal Reasoning (Video Edition)  (2022-23)
+
+                        </a>
+                        <p>
+                            <strong>₹ 34,529.00</strong>
+                        </p>
+                        <p class="product-delivered-by">FREE delivery Wednesday, 14 December. Details</p>
+
+                </div>
+
+            </div>
+            <div class="product-detail-cards">
+                <div class="product-detail-card">
+                    <div class="product-detail-img">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/I/61aUBxqc5PL._AC_UL320_SR320,320_.jpg" alt="">
+
+                    </div>
+                    <a href="./product.html">A Modern Approach To Verbal & Non-Verbal Reasoning (Video Edition)  (2022-23)
+
+                        </a>
+                        <p>
+                            <strong>₹ 34,529.00</strong>
+                        </p>
+                        <p class="product-delivered-by">FREE delivery Wednesday, 14 December. Details</p>
+
+                </div>
+
+            </div>
+            <div class="product-detail-cards">
+                <div class="product-detail-card">
+                    <div class="product-detail-img">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/I/61aUBxqc5PL._AC_UL320_SR320,320_.jpg" alt="">
+
+                    </div>
+                    <a href="./product.html">A Modern Approach To Verbal & Non-Verbal Reasoning (Video Edition)  (2022-23)
+
+                        </a>
+                        <p>
+                            <strong>₹ 34,529.00</strong>
+                        </p>
+                        <p class="product-delivered-by">FREE delivery Wednesday, 14 December. Details</p>
+
+                </div>
+
+            </div>
+            
+            
 
         </div>
 
     </section>
+     <!-- SECTION 4-->
+     <section class="section-4">
+        <div class="section-4-container">
+            <p>See perssonalised recomendation</p>
+            <button>Sign in</button>
+            <p>New Customer? start here</p>
+        </div>
+     </section>
 </body>
 </html>
